// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) nested ternary - string literal t…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(2) nested ternary - template literal…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(3) nested ternary - nested expressio…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? \`lorem ipsum dolor sit amet
            \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
            posuere\`
          : \`lorem ipsum dolor sit amet
            \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
            posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(4) nested ternary - nested expressio…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
            : \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(5) double nested ternary - string li…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(6) double nested ternary - template …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(7) double nested ternary - nested ex…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
          ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : condition
          ? \`lorem ipsum dolor sit amet
            \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
            posuere\`
          : \`lorem ipsum dolor sit amet
            \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
            posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(8) double nested ternary - nested ex…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? condition
              ? \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
              : \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
            : 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;
